--- a/billing.html
+++ b/billing.html
@@ -48,37 +48,33 @@
             </div>
         </section><!-- End Hero -->
         <div class="container-fluid">
-            <div class="row justify-content-center my-2 mb-2">
+            <div class="row justify-content-center my-2 mb-2" id="login">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h1 class="text-center">Sign up</h1>
+                            <h1 class="text-center">Billing Address</h1>
                         </div>
                         <div class="card-body">
                             <form action="">
+                                <div class="form-group mb-3">
+                                    <label for="" class='ms-1'>Name on card</label>
+                                    <input type="text" class="form-control" placeholder="Name on card" required>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="" class='ms-1'>Credit card number</label>
+                                    <input type="text" class="form-control" placeholder="4242-4242-4242-4242">
+                                </div>
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="First Name" required>
+
+                                    <input type="date" class="form-control">
                                     &nbsp;
-                                    <input type="text" class="form-control" placeholder="Last Name" aria-label="Server">
+                                    <input type="text" class="form-control" placeholder="CVV">
                                 </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Your Username" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Your e-mail address" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Create Password" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Cofirm Password" required class="form-control">
-                                </div>
-                                <div class="d-grid my-2">
-                                    <a href='login.html' class="btn btn-primary">Sign Up</a>
+                                <div class="d-grid">
+                                    <a href="success.html" class='btn btn-primary'>Proceed Payment</a>
                                 </div>
                             </form>
-                            <p class="text-center py-3">If you already have an account, <a href="#">login</a></p>
-
+                            <p class='text-center my-2'><img src="./img/payments.png" alt=""></p>
                         </div>
                     </div>
                 </div>
