--- a/login.html
+++ b/login.html
@@ -47,37 +47,29 @@
                 </div>
             </div>
         </section><!-- End Hero -->
+        <p class="alert alert-success" role="alert">Your account was created successfully. go ahead and <a
+                href="#login">login</a></p>
         <div class="container-fluid">
-            <div class="row justify-content-center my-2 mb-2">
+            <div class="row justify-content-center my-2 mb-2" id="login">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h1 class="text-center">Sign up</h1>
+                            <h1 class="text-center">Sign In</h1>
                         </div>
                         <div class="card-body">
                             <form action="">
-                                <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="First Name" required>
-                                    &nbsp;
-                                    <input type="text" class="form-control" placeholder="Last Name" aria-label="Server">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Your Username" required class="form-control">
-                                </div>
                                 <div class="form-group my-2">
                                     <input type="text" placeholder="Your e-mail address" required class="form-control">
                                 </div>
                                 <div class="form-group my-2">
-                                    <input type="text" placeholder="Create Password" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Cofirm Password" required class="form-control">
+                                    <input type="text" placeholder="Password" required class="form-control">
                                 </div>
                                 <div class="d-grid my-2">
-                                    <a href='login.html' class="btn btn-primary">Sign Up</a>
+                                    <a href='index.html' class="btn btn-primary">Sign Up</a>
                                 </div>
                             </form>
-                            <p class="text-center py-3">If you already have an account, <a href="#">login</a></p>
+                            <p class="text-center py-3">If you do not have an account, <a
+                                    href="register.html">Register</a></p>
 
                         </div>
                     </div>
