--- a/success.html
+++ b/success.html
@@ -47,43 +47,7 @@
                 </div>
             </div>
         </section><!-- End Hero -->
-        <div class="container-fluid">
-            <div class="row justify-content-center my-2 mb-2">
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <h1 class="text-center">Sign up</h1>
-                        </div>
-                        <div class="card-body">
-                            <form action="">
-                                <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="First Name" required>
-                                    &nbsp;
-                                    <input type="text" class="form-control" placeholder="Last Name" aria-label="Server">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Your Username" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Your e-mail address" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Create Password" required class="form-control">
-                                </div>
-                                <div class="form-group my-2">
-                                    <input type="text" placeholder="Cofirm Password" required class="form-control">
-                                </div>
-                                <div class="d-grid my-2">
-                                    <a href='login.html' class="btn btn-primary">Sign Up</a>
-                                </div>
-                            </form>
-                            <p class="text-center py-3">If you already have an account, <a href="#">login</a></p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <p class="alert alert-success text-center" role="success">thanks. the payment has been successful</p>
     </main>
 
     <footer class="bg-dark">
